--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-preset-pc",
+  "name": "vue-preset",
   "version": "0.3.0",
   "description": "MS vue preset for pc",
   "main": "prompts.js",
