--- a/package.json
+++ b/package.json
@@ -2,24 +2,5 @@
   "name": "vue-preset",
   "version": "0.3.0",
   "description": "MS vue preset for pc",
-  "main": "prompts.js",
-  "scripts": {
-    "release": "standard-version"
-  },
-  "keywords": [
-    "vue",
-    "preset",
-    "ms"
-  ],
-  "author": "savokiss",
-  "license": "ISC",
-  "devDependencies": {
-    "cz-conventional-changelog": "2.1.0",
-    "standard-version": "^5.0.2"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  }
+  "main": "prompts.js"
 }
